[gd_scene load_steps=39 format=3 uid="uid://bm1neekvm2v0f"]

[ext_resource type="Script" path="res://scripts/characters/character_snake.gd" id="1_kwj57"]
[ext_resource type="Texture2D" uid="uid://d1bxp5i6s6p71" path="res://assets/sprites/snake.png" id="4_2u6jc"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_idle.gd" id="6_xfyt8"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_die.gd" id="7_646ox"]
[ext_resource type="Script" path="res://scripts/facing_horizontal_attack_collision_shape.gd" id="7_ue3ih"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_damage.gd" id="8_2yinv"]
[ext_resource type="Texture2D" uid="uid://dns4y6l1g08o0" path="res://assets/sprites/simple_terrain.png" id="8_6rhgh"]
[ext_resource type="Script" path="res://scripts/states/state_machine.gd" id="9_3m5rs"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_follow.gd" id="9_h0ry7"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_fall.gd" id="10_2f6ni"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_attack.gd" id="11_uub0b"]
[ext_resource type="Script" path="res://scripts/states/label_state_debug.gd" id="12_lv2xc"]
[ext_resource type="Script" path="res://scripts/label_health_debug.gd" id="13_j4tbw"]
[ext_resource type="AudioStream" uid="uid://drtdpiaxkcogj" path="res://assets/sounds/hiss3-103123.mp3" id="14_nw6p4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xswh7"]
size = Vector2(25, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2tbe"]
atlas = ExtResource("4_2u6jc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef101"]
atlas = ExtResource("4_2u6jc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtarv"]
atlas = ExtResource("4_2u6jc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bydpo"]
atlas = ExtResource("4_2u6jc")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd2tf"]
atlas = ExtResource("4_2u6jc")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbym5"]
atlas = ExtResource("4_2u6jc")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne2a2"]
atlas = ExtResource("4_2u6jc")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0acw"]
atlas = ExtResource("4_2u6jc")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23ht7"]
atlas = ExtResource("4_2u6jc")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq5jk"]
atlas = ExtResource("4_2u6jc")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciy7p"]
atlas = ExtResource("4_2u6jc")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrqxj"]
atlas = ExtResource("4_2u6jc")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i615s"]
atlas = ExtResource("4_2u6jc")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4glrb"]
atlas = ExtResource("4_2u6jc")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2jbf"]
atlas = ExtResource("4_2u6jc")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbxia"]
atlas = ExtResource("4_2u6jc")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaea4"]
atlas = ExtResource("4_2u6jc")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwwkj"]
atlas = ExtResource("4_2u6jc")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xro2o"]
atlas = ExtResource("4_2u6jc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46845"]
atlas = ExtResource("4_2u6jc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x7dfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2tbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef101")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtarv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bydpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd2tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbym5")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne2a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0acw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23ht7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq5jk")
}],
"loop": false,
"name": &"damage",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciy7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrqxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i615s")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4glrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2jbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbxia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaea4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwwkj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xro2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46845")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtgv8"]
size = Vector2(25, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q363h"]
size = Vector2(3.83106, 4.95731)

[node name="CharacterSnake" type="CharacterBody2D" groups=["hit", "snake"]]
collision_layer = 2
script = ExtResource("1_kwj57")
speed = 80.0
flap_force = 0.0
health = 3

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2DSnake" type="CollisionShape2D" parent="Hitbox" groups=["hit"]]
z_index = 1
position = Vector2(0.5, -7)
shape = SubResource("RectangleShape2D_xswh7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_x7dfe")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.710599

[node name="CollisionShape2DSnake" type="CollisionShape2D" parent="." groups=["hit"]]
position = Vector2(0.5, -6.5)
shape = SubResource("RectangleShape2D_dtgv8")

[node name="EnemyAreaHorizontalAttack" type="Area2D" parent="." groups=["attack", "enemy_attack", "horizontal_attack"]]

[node name="EnemyCollisionHorizontalAttack" type="CollisionShape2D" parent="EnemyAreaHorizontalAttack" groups=["enemy_attack"]]
position = Vector2(16.4904, -6.28446)
scale = Vector2(1.8322, 1.3251)
shape = SubResource("RectangleShape2D_q363h")
disabled = true
script = ExtResource("7_ue3ih")
facing_left_position = Vector2(-15, -10)
facing_right_position = Vector2(15, -10)

[node name="SpriteAttackBox" type="Sprite2D" parent="EnemyAreaHorizontalAttack/EnemyCollisionHorizontalAttack"]
modulate = Color(1, 1, 1, 0.211765)
position = Vector2(0.00526047, -0.00165647)
scale = Vector2(0.0381294, 0.0539265)
texture = ExtResource("8_6rhgh")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_3m5rs")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_xfyt8")
move_speed = 30.0
enemy = NodePath("../..")

[node name="Die" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_646ox")
enemy = NodePath("../..")

[node name="Timer" type="Timer" parent="StateMachine/Die"]
wait_time = 5.0
one_shot = true

[node name="Damage" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_2yinv")
enemy = NodePath("../..")

[node name="Timer" type="Timer" parent="StateMachine/Damage"]
wait_time = 5.0
one_shot = true

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_h0ry7")
enemy = NodePath("../..")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_2f6ni")
enemy = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("11_uub0b")
enemy = NodePath("../..")

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
wait_time = 3.0
one_shot = true

[node name="LabelCharacterStateDebug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -49.0
offset_top = -55.0
offset_right = 56.0
offset_bottom = -32.0
text = "State: "
script = ExtResource("12_lv2xc")
state_machine = NodePath("../StateMachine")

[node name="LabelCharacterHealthDebug" type="Label" parent="." node_paths=PackedStringArray("character")]
offset_left = -50.0
offset_top = -35.0
offset_right = 55.0
offset_bottom = -12.0
theme_override_font_sizes/font_size = 10
text = "Health: "
script = ExtResource("13_j4tbw")
character = NodePath("..")

[node name="SoundHiss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_nw6p4")
pitch_scale = 1.7
bus = &"SFX"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="StateMachine/Die/Timer" to="StateMachine/Die" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Damage/Timer" to="StateMachine/Damage" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_timer_timeout"]
